<resources>
    <string name="app_name">Lab8</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title">Lab 8</string>
    <string name="Choice">Choose the Item</string>
    <string name="apple">apple</string>
    <string name="pear">pear</string>
    <string name="Mango">mango</string>
    <string name="title_activity_detail">detail</string>
    <string name="Title">hello world!</string>
    <string name="Fruit">About Fruit</string>
    <string name="button">button</string>
    <string name="notice">Please type your comment</string>
    <string name="comment">comment</string>
    <string name="reminder">Type here</string>
    <string name="implicit_intent">Implicit intent</string>
    <string name="template">null</string>
</resources>