<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/labTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="@+id/buttonApple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.175" />

        <Button
            android:id="@+id/buttonApple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:text="@string/apple"
            app:layout_constraintEnd_toStartOf="@+id/buttonPear"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonPear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pear"
            app:layout_constraintEnd_toStartOf="@+id/buttonMango"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonApple"
            app:layout_constraintTop_toTopOf="@+id/buttonApple" />

        <Button
            android:id="@+id/buttonMango"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mango"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonPear"
            app:layout_constraintTop_toTopOf="@+id/buttonPear" />

        <Button
            android:id="@+id/buttonFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="139dp"
            android:text="@string/Fruit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonPear" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="147dp"
            android:layout_marginEnd="162dp"
            android:layout_marginBottom="19dp"
            android:text="@string/Choice"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonPear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labTitle"
            app:layout_constraintVertical_bias="0.35" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

